Fix hover on mobile

--- a/style.css
+++ b/style.css
@@ -97,10 +97,12 @@ button {
   color: #000;
 }
 
-button:hover {
-  cursor: pointer;
-  background-color: #6ffa93;
-  transform: scale(1.05);
+@media (hover: hover) {
+  button:hover {
+    cursor: pointer;
+    background-color: #6ffa93;
+    transform: scale(1.05);
+  }
 }
 
 button:active {
